--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "node-fetch": "^2.6.0",
     "rollup": "^1.25.2",
     "rollup-plugin-babel": "^4.3.3",
-    "tap-spec": "^5.0.0",
+    "tap-spec-dot": "^0.1.1",
     "tape": "^4.11.0"
   }
 }
